Moonshot/res/tests/conditions/bad/condition_4.fox
if(false)
	foo = "if!";
else if(true)
else